examples/errors/header/missing_k.abc
X:1
T:Missing K Field
M:4/4
% H002: Missing key field (K:)
CDEF|
